[workspace]
members = ["packages/storage", "packages/toolkit", "packages/serialization", "packages/crypto", "packages/snip20", "packages/snip721"]
# Since `secret-toolkit` depends on all the other packages, this should make `cargo-check` a bit quicker
# as it won't have to check all the other packages twice.
default-members = ["packages/toolkit"]
